--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required (VERSION 3.21)
 project (SimpleFasta)
 enable_testing()
 
-add_executable(fasta-recs src/fasta-recs.c)
+add_executable(fasta-recs src/fasta-recs.c src/fasta.c)
+add_test(fasta-recs test-fasta-recs.sh)
